<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="online.interview.flendzz.model.UserModelItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar" />

        <androidx.cardview.widget.CardView
            style="@style/MyApp.Primary.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_id" />

                    <TextView
                        android:id="@+id/tvId"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(user.id)}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="1" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_name" />

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.name}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="Balaji" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_email" />

                    <TextView
                        android:id="@+id/tvEmailId"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@{user.email.toLowerCase()}"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        tools:text="balajianb@gmail.com" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_address" />

                    <TextView
                        android:id="@+id/tvAddress"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.address.street+user.address.suite+user.address.city}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="1/81" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_phone" />

                    <TextView
                        android:id="@+id/tvPhone"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="@{user.phone}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="+91 969832952" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyApp.Primary.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MyApp.TextView.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/hint_company_details"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_company_name" />

                    <TextView
                        android:id="@+id/tvCompanyName"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.company.name}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="Flendzz Tech" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        style="@style/MyApp.TexView.Label.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_company_website" />

                    <TextView
                        android:id="@+id/tvCompanyWebsite"
                        style="@style/MyApp.TexView.Label.Primary.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@{user.website}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        tools:text="https://flendzz.com/" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>